--- a/cargo-voyage-viewer/index.html
+++ b/cargo-voyage-viewer/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" data-critters-container>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Cargo Voyage Viewer</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <base href="/cargo-voyage-viewer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <script>
       ((g) => {
@@ -47,9 +47,37 @@
         v: "weekly",
       });
     </script>
-  <style>html,body{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}
-</style><link rel="stylesheet" href="styles-6TZ7F5DW.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-6TZ7F5DW.css"></noscript><link rel="modulepreload" href="chunk-XZP45KYQ.js"><link rel="modulepreload" href="chunk-76LF5C3P.js"></head>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+      }
+      body {
+        line-height: 1;
+      }
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+          Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="styles-6TZ7F5DW.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript><link rel="stylesheet" href="styles-6TZ7F5DW.css" /></noscript>
+    <link rel="modulepreload" href="chunk-XZP45KYQ.js" />
+    <link rel="modulepreload" href="chunk-76LF5C3P.js" />
+  </head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-CXDVF4Q4.js" type="module"></script></body>
+    <script src="polyfills-RX4V3J3S.js" type="module"></script>
+    <script src="main-CXDVF4Q4.js" type="module"></script>
+  </body>
 </html>
