--- a/cargo-voyage-viewer/index.html
+++ b/cargo-voyage-viewer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Cargo Voyage Viewer</title>
-    <base href="/cargo-voyage-viewer" />
+    <base href="/cargo-voyage-viewer/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
