Add about me text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,102 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>petrgavrilov.github.io</title>
+    <title>Petr Gavrilov&nbsp;&mdash; Lead Frontend Developer</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1><strong>Hi&nbsp;there! </strong>👋</h1>
+
+      <p>
+        I&rsquo;m Petr Gavrilov
+        <img class="avatar" width="32" height="32" src="./icons/avatar.png" />,
+        an experienced Lead Frontend Developer with a&nbsp;rich 8-year journey
+        in&nbsp;the tech world. Let me&nbsp;show you how&nbsp;I can add value
+        to&nbsp;your projects:
+      </p>
+
+      <p>
+        <strong>🚀 Frontend Mastery:</strong> Specializing
+        in&nbsp;Angular+Typescript for commercial projects, I&rsquo;m also
+        hands-on with React (Next.js) for personal endeavors. Adaptable
+        to&nbsp;different tech stacks as&nbsp;needed.
+      </p>
+
+      <p>
+        <strong>🛠️ Full stack skills: </strong> Proficient in&nbsp;building APIs
+        using Node.js (Nest.js) and creating robust backends (JSON, SQL) that
+        seamlessly integrate with external services. Currently expanding my
+        skills to&nbsp;Golang (Go).
+      </p>
+
+      <p>
+        <strong>🎨 UX/UI:</strong> Skilled in&nbsp;building intuitive internal
+        tools from the ground up&nbsp;in&nbsp;Figma. I&nbsp;prioritize creating
+        user-friendly interfaces based on&nbsp;solid design principles.
+      </p>
+
+      <p>
+        <strong>📊 Project Management:</strong> I&nbsp;turn ideas into
+        well-defined, actionable plans with clear goals and deadlines, using
+        tools like Jira for meticulous task management.
+      </p>
+
+      <p>
+        <strong>👨‍👨‍👦‍👦 Team Management:</strong> For the past 3&nbsp;years,
+        I&rsquo;ve successfully led a&nbsp;team of&nbsp;developers and&nbsp;QA
+        professionals that&nbsp;I built from the ground&nbsp;up. My&nbsp;focus
+        includes refining processes, fostering team growth, and increasing
+        motivation.
+      </p>
+
+      <p>
+        <strong>🔄 Driving Change:</strong> I&rsquo;m passionate about fostering
+        engineering cultures, promoting collaborative practices, code reviews,
+        and automated&nbsp;QA testing.
+      </p>
+
+      <p>
+        <strong>🌱 Mentorship:</strong> I&rsquo;m enthusiastic about mentoring,
+        having promoted 4&nbsp;junior developers to&nbsp;mid-level and trained
+        several&nbsp;QA professionals in&nbsp;JavaScript coding.
+      </p>
+
+      <p>
+        I&nbsp;look forward to&nbsp;bringing my&nbsp;expertise and passion
+        to&nbsp;your team and projects!
+      </p>
+
+      <p>
+        <strong>📫 Let&rsquo;s connect:</strong> Feel free to&nbsp;reach out:
+      </p>
+
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a href="https://www.linkedin.com/in/petr-gavrilov">
+            <img width="16" height="16" src="./icons/linkedin.png" />
+            <span>linkedIn</span>
+          </a>
+        </li>
+        <li class="contacts-item">
+          <a href="https://t.me/petr_gavrilov">
+            <img width="16" height="16" src="./icons/telegram.png" />
+            <span>telegram</span>
+          </a>
+        </li>
+        <li class="contacts-item">
+          <a href="https://github.com/petrgavrilov">
+            <img width="16" height="16" src="./icons/github.png" />
+            <span>github</span>
+          </a>
+        </li>
+        <li class="contacts-item">
+          <a href="./resume-petr-gavrilov.pdf" download>
+            <img width="16" height="16" src="./icons/downloads.png" />
+            <span>CV (resume)</span>
+          </a>
+        </li>
+      </ul>
+    </main>
+  </body>
 </html>
