Resize & optimize images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <p>
         I&rsquo;m Petr Gavrilov
-        <img class="avatar" width="32" height="32" src="./icons/avatar.png" />,
+        <img class="avatar" width="32" height="32" src="./icons/avatar.webp" />,
         an experienced Lead Frontend Developer with a&nbsp;rich 8-year journey
         in&nbsp;the tech world. Let me&nbsp;show you how&nbsp;I can add value
         to&nbsp;your projects:
@@ -76,25 +76,25 @@
       <ul class="contacts-list">
         <li class="contacts-item">
           <a href="https://www.linkedin.com/in/petr-gavrilov">
-            <img width="16" height="16" src="./icons/linkedin.png" />
+            <img width="16" height="16" src="./icons/linkedin.webp" />
             <span>linkedIn</span>
           </a>
         </li>
         <li class="contacts-item">
           <a href="https://t.me/petr_gavrilov">
-            <img width="16" height="16" src="./icons/telegram.png" />
+            <img width="16" height="16" src="./icons/telegram.webp" />
             <span>telegram</span>
           </a>
         </li>
         <li class="contacts-item">
           <a href="https://github.com/petrgavrilov">
-            <img width="16" height="16" src="./icons/github.png" />
+            <img width="16" height="16" src="./icons/github.webp" />
             <span>github</span>
           </a>
         </li>
         <li class="contacts-item">
           <a href="./resume-petr-gavrilov.pdf" download>
-            <img width="16" height="16" src="./icons/downloads.png" />
+            <img width="16" height="16" src="./icons/downloads.webp" />
             <span>CV (resume)</span>
           </a>
         </li>
