Update crv project

--- a/cargo-voyage-viewer/index.html
+++ b/cargo-voyage-viewer/index.html
@@ -43,13 +43,15 @@
           ? console.warn(p + " only loads once. Ignoring:", g)
           : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
       })({
-        key: "AIzaSyBqi-hfWW7rl5wFrqObxx1E0yWOsNvVj_c",
+        key: "AIzaSyCLYdFRnglkbiaK-9QH3Zwsyj7jv_Cz6IY",
         v: "weekly",
+        // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+        // Add other bootstrap parameters as needed, using camel case.
       });
     </script>
   <style>html,body{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}
-</style><link rel="stylesheet" href="styles-6TZ7F5DW.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-6TZ7F5DW.css"></noscript><link rel="modulepreload" href="chunk-XZP45KYQ.js"><link rel="modulepreload" href="chunk-76LF5C3P.js"></head>
+</style><link rel="stylesheet" href="styles-6TZ7F5DW.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-6TZ7F5DW.css"></noscript><link rel="modulepreload" href="chunk-XZP45KYQ.js"><link rel="modulepreload" href="chunk-MRTDM7LS.js"></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-PHRRV4TO.js" type="module"></script></body>
+  <script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-UCZUKIVN.js" type="module"></script></body>
 </html>
